manifests/media/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: transmission-np
spec:
  selector:
    app: transmission
  ports:
    - name: http
      port: 9091
      targetPort: 9091
      nodePort: 30015  # Expose Jellyfin HTTP on NodePort 
  type: NodePort  # Change from ClusterIP to NodePort
